<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#f4f5f5"
    android:paddingHorizontal="20dp"
    android:orientation="vertical">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_reservations_blue_round"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="-35dp"
        android:elevation="5dp"
        />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_border"
        android:paddingTop="20dp"
        android:paddingHorizontal="10dp"
        android:paddingBottom="15dp"

        >
        <LinearLayout
            android:id="@+id/containerInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/margin_common_default"
            android:theme="@style/TextViewStyle"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_reserve"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="15sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#b3b4b5"
                android:text="@string/subtitle_reserve"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="#b7b8b9"
                android:text="@string/reservist"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discount"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_corner"
                android:textColor="@color/white"
                android:layout_gravity="center"
                />

        <LinearLayout
            android:id="@+id/containerReserve"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvCalendar"
                        style="@style/TextViewBackground"
                        android:text="@string/calendar"
                        app:drawableTopCompat="@drawable/ic_calendario_reservation_black_2" />

                    <ImageButton
                        style="@style/EditImageButton"
                        android:src="@drawable/ic_circle_pencil_blue" />

                    <TextView
                        android:id="@+id/tvTime"
                        style="@style/TextViewBackground"
                        android:layout_marginStart="15dp"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:text="@string/time"
                        app:drawableTopCompat="@drawable/ic_relojito_reservation_black_2" />

                    <ImageButton
                        style="@style/EditImageButton"
                        android:src="@drawable/ic_circle_pencil_blue" />

                    <TextView
                        android:id="@+id/tvPeople"
                        style="@style/TextViewBackground"
                        android:layout_marginStart="15dp"
                        android:text="@string/people"
                        app:drawableTopCompat="@drawable/ic_personas_reservation_black_2" />

                    <ImageButton
                        style="@style/EditImageButton"
                        android:src="@drawable/ic_circle_pencil_blue" />
        </LinearLayout>
        </LinearLayout>
                    <EditText
                        android:id="@+id/etNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/containerInfo"
                        android:drawableStart="@drawable/ic_edit_phone_gray"
                        android:drawablePadding="5dp"
                        android:enabled="false"
                        android:text="@string/text_number"
                        android:textSize="15sp"
                        android:layout_marginTop="@dimen/margin_common_default"
                        android:textAlignment="textStart" />


                    <ImageButton
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_alignTop="@+id/etNumber"
                        android:layout_alignEnd="@+id/etNumber"
                        android:layout_marginTop="7dp"
                        android:background="@color/white"
                        android:src="@drawable/ic_pencil_black" />

                    <EditText
                        android:id="@+id/etDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:drawableStart="@drawable/ic_bubble_comment_gray"
                        android:drawablePadding="10dp"
                        android:enabled="false"
                        android:maxLines="2"
                        android:textSize="14sp"
                        android:paddingEnd="40dp"
                        android:text="@string/text_description"
                        android:layout_below="@+id/etNumber"
                        android:textAlignment="textStart" />



                    <ImageButton
                        android:id="@+id/btnEditDescription"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_alignTop="@+id/etDescription"
                        android:layout_alignEnd="@+id/etDescription"
                        android:layout_marginTop="18dp"
                        android:background="@color/white"
                        android:src="@drawable/ic_pencil_black" />

    </RelativeLayout>

    <Button
        android:id="@+id/btnUpdateReservation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_text_update_reserve"
        android:textAllCaps="false"
        android:layout_marginTop="10dp"
       style="@style/ButtonStyle"
        android:backgroundTint="#0e5bbc"
        android:fontFamily="@font/opensans_regular"
        android:textStyle="bold"
        android:paddingVertical="13dp"
        android:textColor="@color/white"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_text_cancel_reserve"
        android:paddingVertical="13dp"
        android:textAllCaps="false"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:textColor="#CACCCF"
        />

</LinearLayout>
